feat: new powerful filters to contracts table

--- a/packages/lib/translations/en/web.po
+++ b/packages/lib/translations/en/web.po
@@ -850,6 +850,10 @@ msgstr "Album"
 msgid "Album Only"
 msgstr "Album Only"
 
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
+msgid "Albums"
+msgstr "Albums"
+
 #: apps/remix/app/components/general/task/tustreams-type.tsx
 #: apps/remix/app/components/general/task/tustreams-type.tsx
 #: apps/remix/app/components/general/task/task-status.tsx
@@ -1666,7 +1670,6 @@ msgid "Clear file"
 msgstr "Clear file"
 
 #: packages/ui/primitives/data-table.tsx
-#: packages/ui/primitives/data-table-table.tsx
 msgid "Clear filters"
 msgstr "Clear filters"
 
@@ -1933,6 +1936,7 @@ msgstr "Continuously Mixed Individual Song"
 #: apps/remix/app/routes/_authenticated+/contracts.f.$folderId._index.tsx
 #: apps/remix/app/routes/_authenticated+/contracts.$id._index.tsx
 #: apps/remix/app/routes/_authenticated+/contracts.$id.$runId.$publicAccessToken.retry.tsx
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
 #: apps/remix/app/components/general/app-nav-mobile-team.tsx
 #: apps/remix/app/components/general/app-nav-desktop-team.tsx
 #: apps/remix/app/components/general/app-command-menu.tsx
@@ -3386,6 +3390,10 @@ msgstr "Files uploaded"
 msgid "Finalizado"
 msgstr "Finalizado"
 
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
+msgid "Finalized Contracts"
+msgstr "Finalized Contracts"
+
 #: apps/remix/app/components/dialogs/template-move-to-folder-dialog.tsx
 #: apps/remix/app/components/dialogs/move-to-folder-dialog.tsx
 #: apps/remix/app/components/dialogs/files-move-to-folder-dialog.tsx
@@ -4292,7 +4300,6 @@ msgid "No restrictions"
 msgstr "No restrictions"
 
 #: packages/ui/primitives/data-table.tsx
-#: packages/ui/primitives/data-table-table.tsx
 msgid "No results found"
 msgstr "No results found"
 
@@ -4418,6 +4425,10 @@ msgstr "Once you have scanned the QR code or entered the code manually, enter th
 #: packages/lib/constants/template.ts
 msgid "Once your template is set up, share the link anywhere you want. The person who opens the link will be able to enter their information in the direct link recipient field and complete any other fields assigned to them."
 msgstr "Once your template is set up, share the link anywhere you want. The person who opens the link will be able to enter their information in the direct link recipient field and complete any other fields assigned to them."
+
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
+msgid "Ongoing Contracts"
+msgstr "Ongoing Contracts"
 
 #: apps/remix/app/components/forms/team-document-preferences-form.tsx
 msgid "Only admins can access and view the document"
@@ -5732,6 +5743,10 @@ msgstr "Since {0}"
 msgid "Single"
 msgstr "Single"
 
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
+msgid "Singles"
+msgstr "Singles"
+
 #: apps/remix/app/routes/_authenticated+/admin+/site-settings.tsx
 msgid "Site Banner"
 msgstr "Site Banner"
@@ -5833,7 +5848,6 @@ msgid "Something went wrong!"
 msgstr "Something went wrong!"
 
 #: packages/ui/primitives/data-table.tsx
-#: packages/ui/primitives/data-table-table.tsx
 msgid "Something went wrong."
 msgstr "Something went wrong."
 
@@ -6084,6 +6098,15 @@ msgstr "Team settings"
 #: apps/remix/app/routes/_authenticated+/t.$teamUrl+/settings._layout.tsx
 msgid "Team Settings"
 msgstr "Team Settings"
+
+#: apps/remix/app/components/general/menu-switcher.tsx
+#: apps/remix/app/components/general/menu-switcher.tsx
+msgid "Team stats"
+msgstr "Team stats"
+
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
+msgid "Team Stats"
+msgstr "Team Stats"
 
 #: apps/remix/app/routes/_authenticated+/settings+/public-profile.tsx
 msgid "Team templates"
@@ -6903,6 +6926,14 @@ msgstr "Token name"
 msgid "total"
 msgstr "total"
 
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
+msgid "Total"
+msgstr "Total"
+
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
+msgid "Total Contracts"
+msgstr "Total Contracts"
+
 #: apps/remix/app/routes/_authenticated+/admin+/stats.tsx
 msgid "Total Documents"
 msgstr "Total Documents"
@@ -6910,6 +6941,10 @@ msgstr "Total Documents"
 #: apps/remix/app/routes/_authenticated+/admin+/stats.tsx
 msgid "Total Recipients"
 msgstr "Total Recipients"
+
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
+msgid "Total Rows TuStreams"
+msgstr "Total Rows TuStreams"
 
 #: apps/remix/app/routes/_authenticated+/admin+/stats.tsx
 msgid "Total Signers that Signed Up"
@@ -6992,6 +7027,7 @@ msgid "Triggers"
 msgstr "Triggers"
 
 #: apps/remix/app/routes/_authenticated+/tustreams._index.tsx
+#: apps/remix/app/routes/_authenticated+/t.$teamUrl+/stats.tsx
 #: apps/remix/app/components/general/app-nav-mobile-team.tsx
 #: apps/remix/app/components/general/app-nav-desktop-team.tsx
 msgid "TuStreams"
